[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "amanmdest",email = "amanmdest@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.134.0,<0.135.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
