[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "amanmdest",email = "amanmdest@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.134.0,<0.135.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "databases[aiosqlite,asyncpg]",
    "pyjwt (>=2.13.0,<3.0.0)",
    "psycopg2-binary",
    "pydantic-settings (>=2.14.1,<3.0.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest-asyncio = "^1.4.0"
pytest-mock = "^3.15.1"
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
